Finalisasi Integrasi Cart

--- a/bwastore-laravel/.env.example
+++ b/bwastore-laravel/.env.example
@@ -50,3 +50,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SENTRY_LARAVEL_DSN=https://7fd8eb04efda4447b1e75edd25c700df@o1047958.ingest.sentry.io/6031901
+SENTRY_TRACES_SAMPLE_RATE=1
+
+MIDTRANS_SERVER_KEY ="SB-Mid-server-nPMBKWT4uhl3xqBCShZsN7jY"
+MIDTRANS_CLIENT_KEY ="SB-Mid-client-WdfTYMqnf3b864Xw"
+MIDTRANS_IS_PRODUCTION = false
+MIDTRANS_IS_SANITIZED = true
+MIDTRANS_IS_3DS = true
